# TelegramNewsAnalyzer

./: .flake8  .isort.cfg  .pre-commit-config.yaml  docker-compose-kafka.yml  docker-compose-parser.yml  pyproject.toml
Dockerfiles/: Dockerfile.parser
parser/: models.py  parser_entrypoint.py
parser/message_producer/: kafka_connector.py
parser/tg_connector/: client_connection.py
